--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
     "watch": "jest --config test/unit/jest.conf.js --coverage --watch ",
     "test": "npm run unit",
     "lint": "eslint --ext .js,.vue src test/unit",
-    "build": "node build/build.js"
+    "build": "node build/build.js",
+    "quick": "node -r esm run.js"
   },
   "dependencies": {
     "vue": "^2.5.2",
